<resources>
    <string name="app_name">Instagram</string>
    <string name="select_language">English (United States)</string>
    <string name="instagram">Instagram</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log in</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="username">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot your login details?</string>
    <string name="get_help">Get help logging in.</string>
    <string name="or">OR</string>
    <string name="facebook">Log in with Facebook</string>
</resources>