<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="?attr/backgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/select_language"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instagramLogo"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="@font/instagram_font"
            android:textColor="?android:textColorPrimary"
            android:text="@string/instagram"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="15sp"
            android:layout_marginTop="32dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:background="@drawable/button_login"
            app:layout_constraintTop_toBottomOf="@+id/instagramLogo"
            android:id="@+id/buttonNew"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonNew"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/log_in"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>