<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="?android:textColorPrimary"
                android:text="@string/select_language"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintBottom_toTopOf="@+id/footer">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/instagramLogo"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:fontFamily="@font/instagram_font"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/instagram"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLength="100"
                    android:inputType="textImeMultiLine"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="15sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="?android:textColorPrimary"
                    android:hint="@string/username"
                    app:layout_constraintTop_toBottomOf="@+id/instagramLogo"
                    android:background="@drawable/edittext_background"
                    android:id="@+id/editTextUsername"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editTextPassword"
                    android:maxLength="18"
                    android:inputType="textPassword"
                    android:background="@drawable/edittext_background"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:textSize="15sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="?android:textColorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/editTextUsername"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/buttonSwitch"
                    android:background="@drawable/button_circle"
                    app:layout_constraintTop_toTopOf="@id/editTextPassword"
                    app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
                    android:layout_marginEnd="16dp"
                    android:padding="2dp"
                    app:tint="@color/disabled_color"
                    android:src="@drawable/hide_icon"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:enabled="false"
                    android:text="@string/log_in"
                    android:textColor="@color/disabled_text"
                    android:textStyle="bold"
                    android:background="@drawable/button_disable"
                    app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                    android:id="@+id/buttonLogin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotLayout"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/forgot"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        android:text="@string/get_help"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/orLayout"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/forgotLayout">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1.3"
                        android:background="?attr/colorOnSurface"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight=".4"
                        android:text="@string/or"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="?attr/colorOnSurface"
                        android:layout_weight="1.3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/orLayout">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:tint="@color/accent"
                        android:src="@drawable/facebook_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/accent"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        android:text="@string/facebook"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footer"
                app:layout_constraintBottom_toBottomOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/divider"
                    android:background="?attr/colorOnSurface"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/do_not_have_account"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:layout_marginStart="4dp"
                        android:text="@string/sign_up"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>